--- a/res/values/atomx_strings.xml
+++ b/res/values/atomx_strings.xml
@@ -29,4 +29,7 @@
     <string name="msg_minus_one_on_right">From Home screen, swipe right to open Google app</string>
     <string name="pref_show_google_now_summary" translatable="false">@string/msg_minus_one_on_left</string>
 
+    <!-- Folder titles -->
+    <string name="google_folder_title" translatable="false">Google</string>
+
 </resources>
