Launcher3: Improve 'kill' action string
 * Kill -> Force close
   Keeps a better consistence to describe its action
   (as it's going to force close the app)

Change-Id: Ibd0b1999cfbde7550457af4d4ca213452eeb4dd3

--- a/quickstep/res/values/atomx_strings.xml
+++ b/quickstep/res/values/atomx_strings.xml
@@ -19,6 +19,6 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- Kill App recents action shortcut -->
-    <string name="recent_task_option_kill_app">Kill</string>
-    <string name="recents_app_killed">App killed</string>
+    <string name="recent_task_option_kill_app">Force close</string>
+    <string name="recents_app_killed">App closed</string>
 </resources>
